crates/swc/tests/tsc-references/types/primitives/boolean/invalidBooleanAssignments/input.ts/es5.2.minified/output.js
var E, M, E, M;
(E = E || (E = {
}))[E.A = 0] = "A";
var C = function() {
    "use strict";
    !function(instance, Constructor) {
        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
    }(this, C);
};
(M = M || (M = {
})).a = 1, M = !0;
